cabal-version:  2.0
name:           hbbft-cli
version:        0.1.0.0
build-type:     Simple

executable hbbft-cli
  default-language: Haskell2010
  main-is:        Main.hs
  hs-source-dirs: app
  ghc-options:   -threaded -rtsopts -with-rtsopts=-N
  build-depends:  base
                , hbbft
                , binary
                , bytestring
                , vector
