cabal-version:  2.0
name:           hbbft-cloud-haskell
version:        0.1.0.0
build-type:     Simple

library
  default-language: Haskell2010
  hs-source-dirs:  src
  exposed-modules: Control.Distributed.Backend.P2P
  build-depends:   base
                 , binary
                 , bytestring
                 , cereal
                 , containers
                 , dice-entropy-conduit
                 , distributed-process
                 , exceptions
                 , hbbft
                 , merkle-tree
                 , mtl
                 , network
                 , network-transport
                 , network-transport-tcp
                 , secret-sharing
                 , vector

executable hbbft-cloud
  default-language: Haskell2010
  main-is:        Main.hs
  hs-source-dirs: app
  ghc-options:   -threaded -rtsopts -with-rtsopts=-N
  build-depends:  base
                , hbbft-cloud-haskell
                , binary
                , bytestring
                , dice-entropy-conduit
                , distributed-process
                , hbbft
                , mtl
                , vector
