cabal-version:  2.0
name:           hbbft
version:        0.1.0.0
build-type:     Simple

library
  default-language: Haskell2010
  exposed-modules: ErasureCoding
                   MerkleTree
                   RBC
  hs-source-dirs:  src
  build-depends:   base
                 , binary
                 , bytestring
                 , cereal
                 , containers
                 , exceptions
                 , merkle-tree
                 , mtl
                 , secret-sharing
                 , vector

test-suite hbbft-test
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  other-modules:  RBCTest
  hs-source-dirs: test
  ghc-options:   -threaded -rtsopts -with-rtsopts=-N
  build-depends:  hbbft
                , base
                , bytestring
                , exceptions
                , mtl
                , tasty
                , tasty-hunit
